--- a/EmployeeDB/package.json
+++ b/EmployeeDB/package.json
@@ -10,5 +10,8 @@
     "jade": "*",
     "stylus": "*",
     "mongodb": ">= 0.9.6-7"
+  },
+  "scripts": {
+    "test": "../node_modules/mocha/bin/mocha"
   }
 }
