--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,4 @@
 language: node_js
 services:
   - docker
-before_install:
-  - docker build -t shimschiff/employees .
-  - docker ps -a
-deploy:
-  provider: script
-  script: bash docker_push.sh
-  on:
-    branch: master
+  - mongodb
