--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,17 @@ language: node_js
 services:
   - docker
 
-before_install:
-  - docker build -t shschiff/employees .
-  - docker pull mongo:latest
-  - docker run -d --name mongodb -p 27017:27017 mongo
-  - docker run -p 3000:3000 --link mongodb:mongodb shschiff/employees
-  - docker ps -a
+before_script:
+  - docker build -t shschiff/employees-test -f Dockerfile.test .
+script:
+  - docker run --rm -p 3000:3000 --link mongodb:mongodb shschiff/employees-test
+after_success:
+  - docker build -t shschiff/employees -f Dockerfile.prod .
+  - docker push shimschiff/employees
+deploy:
+  provider: script
+  script: echo "ansible.sh"
+  on:
+    branch: master
+after_failure:
+  - echo "tests failed - rejected"
