escaping special char

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_script:
 script:
 - docker run --rm -p 3000:3000 shschiff/employees-test
 after_success:
-- docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
+- docker login -u \${DOCKER_USER} -p \${DOCKER_PASS}
 - export REPO=shschiff/employees
-- docker build -f Dockerfile.prod -t $REPO .
-- docker push $REPO
+- docker build -f Dockerfile.prod -t \$REPO .
+- docker push \$REPO
 after_failure:
 - echo "tests failed - rejected"
