--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - docker
 install: true
 before_script:
-  - echo \${DOCKER_TEST}
+  - echo ${aRUtkhorJbo}
   - docker build -t shschiff/employees-test -f Dockerfile.test .
 script:
 - docker run --rm -p 3000:3000 shschiff/employees-test
