--- a/main.yml
+++ b/main.yml
@@ -1,6 +1,6 @@
 ---
-- hosts: localhost
-  remote_user: remote_username
+- hosts: aws
+  remote_user: ec2-user
   become: yes
   become_method: sudo
   tasks:
