--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
 script:
   - docker run --rm -p 3000:3000 shschiff/employees-test
 after_success:
+  - pip install --upgrade pip
   - pip install ansible
   - ansible all -m ping -i ansible.hosts -u ec2-user
   - ansible-playbook main.yml -i ansible.hosts
