sudo for apt-get

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_script:
 script:
   - docker run --rm -p 3000:3000 shschiff/employees-test
 after_success:
-  - apt-get install ansible
+  - sudo apt-get install -y ansible
   - ansible all -m ping -i ansible.hosts -u ec2-user
   - ansible-playbook main.yml -i ansible.hosts
