--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,17 @@ services:
   - docker
 install: true
 before_script:
-  - echo ${aRUtkhorJbo}
   - docker build -t shschiff/employees-test -f Dockerfile.test .
 script:
   - docker run --rm -p 3000:3000 shschiff/employees-test
 after_success:
   - sudo apt-get install -y software-properties-common
-  - sudo apt-add-repository ppa:ansible/ansible
-  - sudo apt-get update
+  - sudo apt-add-repository -y ppa:ansible/ansible
+  - sudo apt-get -y update
   - sudo apt-get install -y ansible
   - ansible all -m ping -i ansible.hosts -u ec2-user
   - ansible-playbook main.yml -i ansible.hosts
+  - docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
+  - export REPO=shschiff/employees
+  - docker build -f Dockerfile.prod -t ${REPO} .
+  - docker push ${REPO}
