Creating a deploy directory with relevan files

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,27 @@ services:
 - docker
 before_install:
 - openssl aes-256-cbc -K $encrypted_fd565dd073a0_key -iv $encrypted_fd565dd073a0_iv
-  -in deploy_key.enc -out deploy_key -d
+  -in deploy/deploy_key.enc -out deploy/deploy_key -d
 install: true
 before_script:
-- docker build -t shschiff/employees-test -f Dockerfile.test .
+- docker build -t shschiff/employees-test -f deploy/Dockerfile.test .
 script:
 - docker run --rm -p 3000:3000 shschiff/employees-test
 after_success:
 - docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
 - export REPO=shschiff/employees
-- docker build -f Dockerfile.prod -t ${REPO} .
+- docker build -f deployment/Dockerfile.prod -t ${REPO} .
 - docker push ${REPO}
+
 - sudo apt-get install -y software-properties-common
 - sudo apt-add-repository -y ppa:ansible/ansible
 - sudo apt-get -y update
 - sudo apt-get install -y ansible
+
 - eval "$(ssh-agent -s)"
-- chmod 600 ./deploy_key
-- ssh-add ./deploy_key
-- ansible all -m ping -i ansible.hosts -u ec2-user
-- ansible-playbook main.yml -i ansible.hosts
+- chmod 600 deploy/deploy_key
+- ssh-add deploy/deploy_key
+- ansible all -m ping -i deploy/ansible.hosts -u ec2-user
+- ansible-playbook deploy/main.yml -i deploy/ansible.hosts
 after_failure:
 - echo "tests failed - rejected"
