demo dry run 1.0

--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -15,6 +15,7 @@
       docker_container:
         name: employees
         image: shschiff/employees:latest
+        source: pull
         state: started
         links:
          - "mongodb:mongodb"
